added points,rebounds,assists features

--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -9,6 +9,6 @@
 		<p ng-click="fgpercent()">TOP 5 PLAYERS: <b style="color:blue;"><u>Field Goal Percentage</u></b></p>
 		<p ng-click="fgthree()">TOP 5 PLAYERS: <b style="color:blue;"><u>Three Points Made</u></b></p>
 		<p ng-click="fg3percent()">TOP 5 PLAYERS: <b style="color:blue;"><u>Three Point Percentage</u></b></p>
-		<p ng-click="fantasypoints()"">TOP 5 PLAYERS: <b style="color:blue;"><u>Fantasy Points</u></b></p>
+		<p ng-click="fantasypoints()">TOP 5 PLAYERS: <b style="color:blue;"><u>Fantasy Points</u></b></p>
 	</div>
 </div>
