--- a/templates/astPage.html
+++ b/templates/astPage.html
@@ -6,7 +6,7 @@
         <h1 style="text-align:center; color:blue; font-size:200%;">Assists Leaderboard</h1>
         <table>
             <tr ng-repeat="a in dataName">
-                <td> {{rank[$index]}} <b>{{a}}</b> : {{dataValue[$index]}} points per game </td>
+                <td> {{rank[$index]}} <b>{{a}}</b> : {{dataValue[$index]}} assists per game </td>
             </tr>
         </table>
     </div>
