--- a/templates/fg3percentPage.html
+++ b/templates/fg3percentPage.html
@@ -9,4 +9,7 @@
             </table>
     </div>
 
+    <div>
+        <p ng-click="back()"><u  style="color:blue">Back to Main Menu</u></p>
+    </div>
 </div>
