--- a/templates/rebPage.html
+++ b/templates/rebPage.html
@@ -5,7 +5,7 @@
     <h1 style="text-align:center; color:blue; font-size:200%;">Rebounds Leaderboard</h1>
     <table>
       <tr ng-repeat="a in dataName">
-        <td> {{rank[$index]}} <b>{{a}}</b> : {{dataValue[$index]}} points per game </td>
+        <td> {{rank[$index]}} <b>{{a}}</b> : {{dataValue[$index]}} rebounds per game </td>
       </tr>
     </table>
   </div>
