--- a/templates/blocksPage.html
+++ b/templates/blocksPage.html
@@ -9,8 +9,7 @@
     </table>
 </div>
 
-
-
-
-
+    <div>
+        <p ng-click="back()"><u  style="color:blue">Back to Main Menu</u></p>
+    </div>
 </div>
