--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -1,12 +1,14 @@
-<div ng-controller="mainCtrl">
-	<h1 style="text-align: center">NBA Season 2016-2017 Playoff Leaders</h1>
+<div ng-controller="mainCtrl" align="center">
+	<h3>NBA Season 2016-2017 Playoff Leaders</h3><br><br><br>
 	<div>
-
-		<p ng-click="blocks()">TOP 5 PLAYERS: <b style="color:blue;"><u>Blocks</u></b></p>
-		<p ng-click="steals()">TOP 5 PLAYERS: <b style="color:blue;"><u>Steals</u></b></p>
-		<p ng-click="fgpercent()">TOP 5 PLAYERS: <b style="color:blue;"><u>Field Goal Percentage</u></b></p>
-		<p ng-click="fgthree()">TOP 5 PLAYERS: <b style="color:blue;"><u>Three Points Made</u></b></p>
-		<p ng-click="fg3percent()">TOP 5 PLAYERS: <b style="color:blue;"><u>Three Point Percentage</u></b></p>
-		<p ng-click="fantasypoints()">TOP 5 PLAYERS: <b style="color:blue;"><u>Fantasy Points</u></b></p>
+		<button ng-click="points()">TOP 5 PLAYERS: Points</button>
+		<button ng-click="rebounds()">TOP 5 PLAYERS: Rebounds</button>
+		<button ng-click="assists()">TOP 5 PLAYERS: Assists</button>
+		<button ng-click="blocks()">TOP 5 PLAYERS:Blocks</button>
+		<button ng-click="steals()">TOP 5 PLAYERS: Steals</button><br><br><br>
+		<button ng-click="fgpercent()">TOP 5 PLAYERS: Field Goal Percentage</button>
+		<button ng-click="fgthree()">TOP 5 PLAYERS: Three Points Made</button>
+		<button ng-click="fg3percent()">TOP 5 PLAYERS: Three Point Percentage</button>
+		<button ng-click="fantasypoints()">TOP 5 PLAYERS: Fantasy Points</button>
 	</div>
 </div>
