added points rebounds and assists

--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -1,7 +1,9 @@
 <div ng-controller="mainCtrl">
 	<h1 style="text-align: center">NBA Season 2016-2017 Playoff Leaders</h1>
 	<div>
-
+		<p ng-click="points()">TOP 5 PLAYERS: <b style="color:blue;"><u>Points</u></b></p>
+		<p ng-click="rebounds()">TOP 5 PLAYERS: <b style="color:blue;"><u>Rebounds</u></b></p>
+		<p ng-click="assists()">TOP 5 PLAYERS: <b style="color:blue;"><u>Assists</u></b></p>
 		<p ng-click="blocks()">TOP 5 PLAYERS: <b style="color:blue;"><u>Blocks</u></b></p>
 		<p ng-click="steals()">TOP 5 PLAYERS: <b style="color:blue;"><u>Steals</u></b></p>
 		<p ng-click="fgpercent()">TOP 5 PLAYERS: <b style="color:blue;"><u>Field Goal Percentage</u></b></p>
