insert home page button in html files; update controllers

--- a/templates/blocksPage.html
+++ b/templates/blocksPage.html
@@ -7,6 +7,9 @@
             <td> {{rank[$index]}} <b>{{a}}</b> : {{dataValue[$index]}} blocks per game </td>
         </tr>
     </table>
+    <div>
+        <p ng-click="back()"><u  style="color:blue">Back to Main Menu</u></p>
+    </div>
 </div>
 
 
