--- a/templates/fg3percentPage.html
+++ b/templates/fg3percentPage.html
@@ -8,5 +8,8 @@
                 </tr>
             </table>
     </div>
+    <div>
+        <p ng-click="back()"><u  style="color:blue">Back to Main Menu</u></p>
+    </div>
 
 </div>
