--- a/templates/stealsPage.html
+++ b/templates/stealsPage.html
@@ -1,12 +1,17 @@
 <div ng-controller="stealsCtrl">
 
 <div ng-if="init == 'STL'">
+    <div>
     <h1 style="text-align:center; color:blue; font-size:200%;">Steals Leaderboard</h1>
     <table>
         <tr ng-repeat="a in dataName">
             <td> {{rank[$index]}} <b>{{a}}</b> : {{dataValue[$index]}} steals per game </td>
         </tr>
     </table>
+    </div>
+    <div>
+        <p ng-click="back()"><u  style="color:blue">Back to Main Menu</u></p>
+    </div>
 </div>
 
 </div>
