--- a/templates/FPPage.html
+++ b/templates/FPPage.html
@@ -8,4 +8,7 @@
             </tr>
         </table>
      </div>
+    <div>
+        <p ng-click="back()"><u  style="color:blue">Back to Main Menu</u></p>
+    </div>
 </div>
