Updated from the start,field goal 3pt percentage and fantasy points remains

--- a/templates/FPPage.html
+++ b/templates/FPPage.html
@@ -1,5 +1,5 @@
 <div ng-controller = "fantasypointsCtrl">
-    <!--<link rel="stylesheet" type="text/css" href="../css/design.css">-->
+    <link rel="stylesheet" type="text/css" href="../css/design.css">
      <div>
         <h1 style="text-align:center; color:blue; font-size:200%;">Fantasy Points Leaderboard</h1>
         <table>
@@ -8,6 +8,7 @@
             </tr>
         </table>
      </div>
+
     <div>
         <p ng-click="back()"><u  style="color:blue">Back to Main Menu</u></p>
     </div>
