--- a/templates/fg3percentPage.html
+++ b/templates/fg3percentPage.html
@@ -1,5 +1,5 @@
 <div ng-controller = "fg3percentCtrl">
-<!--<link rel="stylesheet" type="text/css" href="../css/design.css">-->
+<link rel="stylesheet" type="text/css" href="../css/design.css">
     <div>
         <h1 style="text-align:center; color:blue; font-size:200%;">Field Goal Three Point Percentage</h1>
             <table>
