--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -1,14 +1,14 @@
 <div ng-controller="mainCtrl">
 	<h1 style="text-align: center">NBA Season 2016-2017 Playoff Leaders</h1>
 	<div>
-		<p ng-click="points()">TOP 5 PLAYERS: <b style="color:blue;"><u>Points</u></b></p>
-		<p ng-click="rebounds()">TOP 5 PLAYERS: <b style="color:blue;"><u>Rebounds</u></b></p>
-		<p ng-click="assists()">TOP 5 PLAYERS: <b style="color:blue;"><u>Assists</u></b></p>
+		<!--<p ng-click="points()">TOP 5 PLAYERS: <b style="color:blue;"><u>Points</u></b></p>-->
+		<!--<p ng-click="rebounds()">TOP 5 PLAYERS: <b style="color:blue;"><u>Rebounds</u></b></p>-->
+		<!--<p ng-click="assists()">TOP 5 PLAYERS: <b style="color:blue;"><u>Assists</u></b></p>-->
 		<p ng-click="blocks()">TOP 5 PLAYERS: <b style="color:blue;"><u>Blocks</u></b></p>
 		<p ng-click="steals()">TOP 5 PLAYERS: <b style="color:blue;"><u>Steals</u></b></p>
-		<p ng-click="fgpercent()">TOP 5 PLAYERS: <b style="color:blue;"><u>Field Goal Percentage</u></b></p>
-		<p ng-click="fgthree()">TOP 5 PLAYERS: <b style="color:blue;"><u>Three Points Made</u></b></p>
-		<p ng-click="fg3percent()">TOP 5 PLAYERS: <b style="color:blue;"><u>Three Point Percentage</u></b></p>
-		<p ng-click="fantasypoints()">TOP 5 PLAYERS: <b style="color:blue;"><u>Fantasy Points</u></b></p>
+		<!--<p ng-click="fgpercent()">TOP 5 PLAYERS: <b style="color:blue;"><u>Field Goal Percentage</u></b></p>-->
+		<!--<p ng-click="fgthree()">TOP 5 PLAYERS: <b style="color:blue;"><u>Three Points Made</u></b></p>-->
+		<!--<p ng-click="fg3percent()">TOP 5 PLAYERS: <b style="color:blue;"><u>Three Point Percentage</u></b></p>-->
+		<!--<p ng-click="fantasypoints()">TOP 5 PLAYERS: <b style="color:blue;"><u>Fantasy Points</u></b></p>-->
 	</div>
 </div>
