--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -2,11 +2,11 @@
 	<h1 style="text-align: center">NBA Season 2016-2017 Playoff Leaders</h1>
 	<div>
 
-		<p ng-click="blocks()">TOP 5 PLAYERS: <b style="color:blue;"><u>Blocks</u></b></p>
-		<p ng-click="steals()">TOP 5 PLAYERS: <b style="color:blue;"><u>Steals</u></b></p>
-		<p ng-click="fgpercent()">TOP 5 PLAYERS: <b style="color:blue;"><u>Field Goal Percentage</u></b></p>
-		<p ng-click="fgthree()">TOP 5 PLAYERS: <b style="color:blue;"><u>Three Points Made</u></b></p>
-		<p ng-click="fg3percent()">TOP 5 PLAYERS: <b style="color:blue;"><u>Three Point Percentage</u></b></p>
-		<p ng-click="fantasypoints()">TOP 5 PLAYERS: <b style="color:blue;"><u>Fantasy Points</u></b></p>
+		<button ng-click="blocks()">TOP 5 PLAYERS: <b style="color:blue;"><u>Blocks</u></b></button>
+		<button ng-click="steals()">TOP 5 PLAYERS: <b style="color:blue;"><u>Steals</u></b></button>
+		<!--<p ng-click="fgpercent()">TOP 5 PLAYERS: <b style="color:blue;"><u>Field Goal Percentage</u></b></p>-->
+		<!--<p ng-click="fgthree()">TOP 5 PLAYERS: <b style="color:blue;"><u>Three Points Made</u></b></p>-->
+		<!--<p ng-click="fg3percent()">TOP 5 PLAYERS: <b style="color:blue;"><u>Three Point Percentage</u></b></p>-->
+		<!--<p ng-click="fantasypoints()">TOP 5 PLAYERS: <b style="color:blue;"><u>Fantasy Points</u></b></p>-->
 	</div>
 </div>
